# axum_websocket

./: Cargo.toml  README.md
src/: main.rs
src/app/: app.rs
src/config/: config.rs
src/internal/: mod.rs
src/internal/auth/jwt/: jwt_dto.rs  jwt_token.rs  mod.rs
src/internal/http_api/handler/: message_handler.rs
src/internal/ws/: mod.rs  socket_struct.rs  ws_handler.rs  ws_handler_with_token.rs
src/routes/: message_router.rs  mod.rs  ws_router.rs
