[package]
name = "axum_websocket"
version = "0.1.0"
edition = "2021"

[dependencies]

# axum framwork
axum = { version = "0.8.3", features = ["ws"] }
# async runtime lib
tokio = { version = "1.44.2", features = ["full"] }

# futurue streams, sinkExt
futures = "0.3.31"

# for serialize and deserialize
serde = { version = "1.0.219", features = ["derive"] }

# for JSON serialize and deserialize
serde_json = "1.0"

# for http middleware collection
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# for logging
tracing = "0.1.41"

# for logging event
tracing-subscriber = "0.3.19"

# dotenv
dotenv = { version = "0.15.0", features = ["cli"] }
